# Final_Embedded_Sheno

./: .gitignore  CMakeLists.txt  README.md
App/: Board_Config.h  Button_Handlers.c  Button_Handlers.h  Dispatcher.c  Dispatcher.h  Elevator_FSM.c  Elevator_FSM.h  Spi_Protocol.c  Spi_Protocol.h  Telemetry.c  Telemetry.h
Dma/: Dma.c  Dma.h
Docs/: Demo_Flow.md  FSM_State_Transitions.md  Final_Audit_Report.md  Full_Mark_Readiness_Checklist.md  Interrupt_Priorities.md  Memory_Usage.md  PWM_Calculations.md  Protocol_Selection.md  Register_Map.md  SPI_Packet_Definition.md  System_Timing.md  fsm.md  timing.md
Exti/: Exti.c
Lib/: Critical.h  Std_Types.h  Utils.c  Utils.h
Nvic/: Nvic.c  Nvic.h
Pwm/: Pwm.c
Rcc/: Rcc.c
RingBuffer/: RingBuffer.c  RingBuffer.h
Spi/: Spi.c  Spi.h  Spi_Private.h
Timer/: Timer.c
Usart/: Usart.c  Usart.h
cmake/: ArmToolchain.cmake  IncludeList.cmake
src/: main.c
